--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,12 @@
 {
     "version": 2,
-    "builds": [{ "src": "app.py", "use": "@vercel/python" }],
+    "builds": [
+      { 
+        "src": "app.py", 
+        "use": "@vercel/python",
+        "config": { "runtime": "python3.9" } 
+      }
+    ],
     "routes": [
       {
         "src": "/(.*)",
@@ -11,3 +17,4 @@
       "FLASK_ENV": "production"
     }
   }
+  
