--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,7 @@
     "builds": [
       { 
         "src": "app.py", 
-        "use": "@vercel/python",
-        "config": { "runtime": "python3.11" } 
+        "use": "@vercel/python"
       }
     ],
     "routes": [
@@ -12,9 +11,6 @@
         "src": "/(.*)",
         "dest": "app.py"
       }
-    ],
-    "env": {
-      "FLASK_ENV": "production"
-    }
+    ]
   }
   
